<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" >

    <Switch
        android:id="@+id/master_switch_NC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/master_switch_NC" />

    <EditText
        android:id="@+id/right_margin_NC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/left_margin_NC"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/left_margin_NC"
        android:ems="10"
        android:hint="@string/right_margin"
        android:inputType="number" />

    <EditText
        android:id="@+id/top_margin_NC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/right_margin_NC"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/right_margin_NC"
        android:ems="10"
        android:hint="@string/top_margin"
        android:inputType="number" />

    <EditText
        android:id="@+id/bottom_margin_NC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/top_margin_NC"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/top_margin_NC"
        android:ems="10"
        android:hint="@string/bottom_margin"
        android:inputType="number" />
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/bottom_margin_NC"
        android:text="@string/Presets_info" />

    <Spinner
        android:id="@+id/presets_NC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:entries="@array/presets" />

    <Button
        android:id="@+id/applyNC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/presets_NC"
        android:text="@string/apply"
        android:onClick="apply" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/left_margin_NC"
        android:text="@string/left"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/right_margin_NC"
        android:text="@string/right"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/top_margin_NC"
        android:text="@string/top"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/bottom_margin_NC"
        android:text="@string/bottom"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/left_margin_NC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:hint="@string/left_margin"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/master_switch_NC"
        android:layout_marginTop="17dp"
        android:text="@string/info_notificationCenter"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>