<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="${packageName}.${activityClass}" >

    <CheckBox
        android:id="@+id/show_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NotificationOption" />

    <CheckBox
        android:id="@+id/transparent_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trans_notif" />

    <CheckBox
        android:id="@+id/show_toggle_toast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_toast" />

    <CheckBox
        android:id="@+id/show_overlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_overlay" />

    <Spinner
        android:id="@+id/overlay_colour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/colours" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_toggle_option"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/toggle_activity_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/toggle_option"
        android:prompt="@string/activity_toggle_option" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dpi_info"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/dpi_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/apply_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="apply"
        android:text="@string/apply" />

</TableLayout>